added google verification tag

--- a/website/index.html
+++ b/website/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" href="/src/public/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="google-site-verification" content="qoQmKyRRXfD997YyjWcqKAZHvIdnVrKXn9mH0M4MFqM" />
     <title>CoolTab Home</title>
 </head>
 
